external libraries and bundle them properly. Reorganised source files into
folders so I can keep track of where things are.

_Huge_ great internal re-write. Many more code-paths are now much more
message-passing based, and can do things in the background. The Google Social
stuff uses this, so no longer blocks the foreground thread.

### 0.0.12 (in development)

Shelf now has a preference to only poll for context and display the window if
a global shortcut key is pressed (currently, this is hard-coded to
Command-Ctrl-J). Turning this on will stop Shelf from polling, it'll manually
display the window when you press the hotkey. BUG - turning this preference
off will require a restart of Shelf before the polling starts again. And yes,
I'll make the key configurable soon.

Feed entries now display about how long ago they were, rather than absolute
times. Do we like this? Maybe this should be a preference.

Messed with the flickr photo display style to include titles, and have smaller
thumbnails. I think I prefer this way.

Special casing for last.fm urls is now in, so you'll see your contact's
recently-played tracks and coverart, if available.

Special-casing for the few pages I know of that have
[totally broken RSS feeds](http://jerakeen.org/blog/2008/02/irritating-rss-feed-links/)
to supress them from the feedlists.

Feeds in the display are now ordered with the most recently updated feed at
the top of the list. 'Special' feeds (twitter, flickr, lastfm) are still
ordered above all others.

We now correctly strip CSS styling from feed contents.

The file cache now cleans itself up. The first run of the app may take a
while... Sorry.

Shelf now sends a proper User-Agent to remote servers when fetching feeds.

Documented large chunks of the source much better.

Removed the xmltramp library, using simplejson to parse the Dopplr API files
instead. Not that the Dopplr module works. But if it did, I would.